crates/solidity-v2/testing/snapshots/cst_output/Expression/keyword_unchecked/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Semicolon. One of OpenBrace was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/Expression/keyword_unchecked/input.sol:6:1 ]
   │
 6 │ ;
   │ ┬  
   │ ╰── Error occurred here.
───╯
